
Fixed: When the monit ID is generated in first start and the system is shut down before the
file was stored to the filesystem, an empty monitid file may be created. Thanks to Alexander Dahl
for fix.

Fixed: The SSL connection can be sporadically interrupted.

Fixed: Issue #1101: Updated configuration examples for PAM in the Monit manual. Thanks to Lutz Mader.


Version 5.33.0

New: Added clickjacking protection headers to Monit HTTP GUI (SAMEORIGIN iframe is allowed).

Fixed: Issue #1035: If the start/stop/restart program statement contains the equal sign, which
is not followed by a space character, the configuration is not parsed correctly.

Fixed: Issue #1047: If the MariaDB server doesn't allow access to the host from which Monit test is running,
Monit reported "Invalid handshake packet sequence id -- not MySQL protocol".

Fixed: The "responsetime" option added to the ping test and fixed the port reponse time comparison.


Version 5.32.0

Fixed: Issue #1028: When the Monit statefile was removed, the "monit start <service>" action for
services with "onreboot nostart" option started the service, but didn't enable the monitoring.
The same problem occurred if a new "onreboot nostart" service was added, even if the statefile
existed.

Fixed: Issue #1029: The generic protocol test truncated the received data in the case that it
contained zeros.

Fixed: PAM authentication: Users with a valid password for disabled account can login to Monit.
Thanks to Youssef Rebahi-Gilbert.

Fixed: Monit may crash or the HTTP interface can block if long stream of HTTP headers is send to
the Monit HTTP interface. Thanks to Youssef Rebahi-Gilbert for report.


Version 5.31.0

New: Issue #1021: Add support for Linux OpenZFS 2.x I/O statistics

New: Issue #555: Add support for FreeBSD ZFS I/O statistics (requires FreeBSD 12.x or later).

Fixed: Issue #1025: If Monit 5.30.0 CLI action was executed for non-existent service name, the error