@@ -56,6 +56,11 @@ Fixed: The SSL connection can be sporadically interrupted.
 
 Fixed: Issue #1101: Updated configuration examples for PAM in the Monit manual. Thanks to Lutz Mader.
 
+Fixed: The network test was failing on WSL (Windows subsystem for Linux).
+
+Fixed: Make network interface speed statistics optional (monit used to report link failure when
+       statistics were not available) and do not report/check if statistics are not available.
+
 
 Version 5.33.0
 
